test/message/stdin_messages.out
[stdin]
[stdin]:1
with(this){__filename}
^^^^

SyntaxError: Strict mode code may not include a with statement
    at makeContextifyScript (node:internal/vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)
    at endReadableNT (node:internal/streams/readable:*:*)
    at process.processTicksAndRejections (node:internal/process/task_queues:*:*)

Node.js *
42
42
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:7
    at runScriptInThisContext (node:internal/vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)
    at endReadableNT (node:internal/streams/readable:*:*)

Node.js *
[stdin]:1
throw new Error("hello")
^

Error: hello
    at [stdin]:1:*
    at runScriptInThisContext (node:internal/vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)
    at endReadableNT (node:internal/streams/readable:*:*)

Node.js *
100
[stdin]:1
let x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [stdin]:1:16
    at runScriptInThisContext (node:internal/vm:*:*)
    at node:internal/process/execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal/process/execution:*:*)
    at evalScript (node:internal/process/execution:*:*)
    at node:internal/main/eval_stdin:*:*
    at Socket.<anonymous> (node:internal/process/execution:*:*)
    at Socket.emit (node:events:*:*)
    at endReadableNT (node:internal/streams/readable:*:*)

Node.js *

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `* --trace-uncaught ...` to show where the exception was thrown)

Node.js *

[stdin]:1
let ______________________________________________; throw 10
                                                    ^
10
(Use `* --trace-uncaught ...` to show where the exception was thrown)

Node.js *
done
